rebase to laptop

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -28,7 +28,19 @@ textarea {
 
 body {
   margin: 0 auto;
-  font-family: 'Lato', sans-serif;
+  font-family: 'DM Sans', serif, sans-serif;
+
+  background-color: rgb(189, 189, 189);
+}
+
+main {
+  width: 1184px;
+  background-color: rgb(255, 255, 255);
+
+  margin-top: 100px;
+  margin-bottom: 100px;
+
+  border-radius: 0 13px 13px 0;
 }
 
 a {
@@ -38,4 +50,20 @@ a {
 
 ul {
   list-style: none;
+}
+
+button {
+  cursor: pointer;
+  background-color: rgba(255, 255, 255, 1);
+}
+
+#app {
+  display: flex;
+  max-width: 1440px;
+
+  margin: 0 auto;
+}
+
+.flex {
+  display: flex;
 }
